Bug 86809 - Filter operator "AND" cannot be restored after FILEOPEN
Summary: Filter operator "AND" cannot be restored after FILEOPEN
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: highest major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta3 ta...
Keywords:
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-11-28 05:48 UTC by HD
Modified: 2014-12-15 13:53 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description HD 2014-11-28 05:48:33 UTC
Steps to reproduce:

1 Open new spreadsheet.
2 Enter the following data into A1:C8.
--------------------------
date	product	number
14/11/1	product1	2
14/11/1	product2	4
14/11/1	product1	1
14/11/2	product2	5
14/11/2	product1	4
14/11/3	product2	2
14/11/3	product1	1
--------------------------

3 Select A1 and then click [Data]-[Filter]-[AutoFilter].
4 Filter data by selecting "2014-11-01"(2014-Nobember-1) in "data" column, "product1" in "product" column.
5 Buttons of column A and B become blue, and only the second and fourth rows are displayed.
6 Save the document as ODS.
7 Click [File]-[Reload].

Now buttons of column A and B become black.
If you check [Data]-[Filter]-[Standard Filter], you can find that the filter operation has changed to "OR" from "AND".
Also if you click [Data]-[Refresh Range], the result will change. 

Versions checked with the issue.
4.1.6
4.2.7
4.3.4
Comment 1 m_a_riosv 2014-11-28 13:08:36 UTC
Hi @HD thanks for reporting.

Reproducible:
Win7x64Ultimate
Version: 4.3.5.1
Build ID: 8fd0451cc08e6a5310bed8b7ad1c46b93c1c6889

Version: 4.5.0.0.alpha0+
Build ID: 90fe751ab381cf59e87b79d921b3773567774af2
TinderBox: Win-x86@39, Branch:master, Time: 2014-11-27_05:30:25

Filter in saved file:
"
ranges><table:database-range table:name="__Anonymous_Sheet_DB__0" table:target-range-address="Sheet1.A1:Sheet1.C8" table:display-filter-buttons="true"><table:filter><table:filter-and><table:filter-condition table:field-number="0" table:value="01/11/2014" table:operator="="/><table:filter-condition table:field-number="1" table:value="product1" table:operator="="/></table:filter-and></table:filter></table:database-range></table:database-ranges></office:spreadsheet></office:body></office:document-content>
"
Comment 2 Julien Nabet 2014-11-30 15:58:38 UTC
MAB => highest
Comment 3 Eike Rathke (retired, only occasionally showing up) 2014-12-12 13:48:18 UTC
At least since 4.1.x
Comment 4 Commit Notification 2014-12-12 14:24:01 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b500e60b32b5cf8fd61beb7476c2c29e65aee3e4

resolved fdo#86809 connect filter conditions correctly

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-12-12 14:27:35 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ff62f81e6795b68e53b2f96963745c4e98d9aaf7&h=libreoffice-4-4

resolved fdo#86809 connect filter conditions correctly

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2014-12-12 14:31:25 UTC
Pending review https://gerrit.libreoffice.org/13449 for 4-3
Comment 7 Commit Notification 2014-12-14 15:54:34 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b9bcc2e7f31e880e71c8d2a2aaf1b2839d4d32a&h=libreoffice-4-3

resolved fdo#86809 connect filter conditions correctly

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-12-15 13:53:01 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=08f89a78e899b1f463d78fe31696418f7ba07ea7&h=libreoffice-4-2

resolved fdo#86809 connect filter conditions correctly

It will be available in 4.2.9.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.