resolved fdo#86809 connect filter conditions correctly

Maybe since 0960ec3e1b7b0d872d1f84d2d56f480a4df08b21 all conditions of a
single filter stack were OR connected, regardless whether filter-and was
given in the file.

Change-Id: Ifb423ccc7deb42bb6bba0bfc810607633f2c342c
(cherry picked from commit b500e60b32b5cf8fd61beb7476c2c29e65aee3e4)
Reviewed-on: https://gerrit.libreoffice.org/13449
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 1b9bcc2e7f31e880e71c8d2a2aaf1b2839d4d32a)